<resources>
    <string name="app_name">Sound When Phone Charging</string>

    <string name="mp3_country">connect</string>
    <string name="mp3_disconnect_country">disconnect</string>

    <string name="exit" translatable="false">Back</string>
    <string name="description_rate" translatable="false">Do you want to Go Back</string>

    <string name="continu">Continue</string>
    <string name="play">Play</string>
    <string name="exit_app">Exit</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>

    <string name="privacy_policy">Privacy policy will be shown here</string>
    <string name="on_connect">On Connect</string>
    <string name="on_disconnect">On Disconnect</string>
    <string name="select_the_type">Select the type of ringtone</string>
    <string name="set">Set</string>
    <string name="as_the_ringtone">as the ringtone</string>
    <string name="microphone_permission_need">The microphone permission is needed for voice recording. Please grant the permission.</string>
    <string name="storage_permission_need">The storage is important for this app. Please grant the permission.</string>
    <string name="request_permission">Request permission</string>
    <string name="download_success">File downloaded successfully</string>
    <string name="asset_folder_name">ringtones</string>
    <string name="alarm_folder_name">alarm</string>
    <string name="download_folder_name">ChargingStatus Download</string>
    <string name="download_screen_title">Download</string>
    <string name="home_screen_title">Home</string>
    <string name="home_screen_instructions">The app will play an ringtone when charging status changes!</string>
    <string name="loading">Loading..</string>
    <string name="recording_folder_name">ChargingStatus Recordings</string>
    <string name="phone_screen_title">Phone</string>
    <string name="privacy_screen_title">Privacy</string>
    <string name="record_tab_title">Record</string>
    <string name="my_records_tab_title">My Records</string>
    <string name="record_screen_title">Record</string>
    <string name="recording_saved">Recording saved</string>
    <string name="ringtone_screen_title">Ringtone</string>
    <string name="phone">Phone</string>
    <string name="download">Download</string>
    <string name="record">Record</string>
    <string name="search_screen_title">Search</string>
    <string name="search_box_hint">Ringtones</string>
    <string name="search_for_ringtones">Search for ringtones</string>
    <string name="settings_screen_title">Settings</string>
    <string name="unlock_screen_title">Unlock</string>
    <string name="unlock_for_free">Unlock for free</string>
    <string name="success">Success!</string>
    <string name="unlock">Unlock</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="version">Version</string>
    <string name="more_apps">More Apps</string>
    <string name="privacy">Privacy</string>
    <string name="record_file_prefix">voice_</string>
    <string name="room_database_name">app-database</string>
    <string name="first_time_loading_msg">Getting all ringtones from your device. Please wait..</string>
    <string name="no_ringtone">No Ringtones Found</string>
    <string name="file_icon">File Icon</string>
    <string name="on_connect_underline"><u>On Connect</u></string>
    <string name="on_disconnect_underline"><u>On Disconnect</u></string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="saved_successfully">File saved successfully</string>
    <string name="battery_info_screen_title">Battery Info</string>
    <string name="charging_animation_screen_title">Animations</string>
    <string name="anti_theft_screen_title">Anti Theft Alarm</string>
    <string name="battery_health_cold">Cold</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_over_voltage">Over Voltage</string>
    <string name="battery_health_overheat">Overheat</string>
    <string name="battery_health_unspecified_failure">Unspecified</string>
    <string name="battery_status_discharging">Discharging</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_unknown">Unknown</string>
    <string name="battery_status_full">Battery Full</string>
    <string name="battery_health_unknown">Unknown</string>
    <string name="battery_plugged_none">None</string>
    <string name="battery_plugged_wireless">Wireless</string>
    <string name="battery_plugged_usb">USB</string>
    <string name="battery_plugged_ac">AC</string>
    <string name="animation_settings">Animation Settings</string>
    <string name="apply_animation">Apply Animation</string>
    <string name="set_alarm_pin">Set Alarm Pin</string>
    <string name="unplugged_alarm">Unplugged Alarm</string>
    <string name="touch_alarm">Touch Alarm</string>
    <string name="anti_pocket_alarm">Anti-Pocket Alarm</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="touch_alarm_desc">Detects when someone touches your phone</string>
    <string name="service_activate_timer_desc">Service will be activated in</string>
    <string name="charging_icon">Charging Icon</string>
    <string name="set_pin_title">Set your pin</string>
    <string name="why_pin_desc">This pin will be used to stop alarms. Don\'t forget the pin!</string>
    <string name="enter_code_text">Enter your pin</string>
    <string name="confirm_code_text">Confirm pin</string>
    <string name="pin_hint">****</string>
    <string name="confirm">Confirm</string>
    <string name="tab_layout_content_desc">TabLayout</string>
    <string name="searching_loading_text">Searching. Please wait..</string>
    <string name="quick_access">Quick Access</string>
    <string name="charging_animation">Charging Animation</string>
    <string name="anti_theft_protection">Anti-theft Protection</string>
    <string name="battery_info">Battery Info</string>
    <string name="charger_removed_alarm_desc">Detects when charger is removed</string>
    <string name="battery_capacity">Battery Capacity</string>
    <string name="temperature">Temperature</string>
    <string name="battery_type">Battery Type</string>
    <string name="voltage">Voltage</string>
    <string name="battery_health">Battery Health</string>
    <string name="status">Status</string>
    <string name="charging_type">Charging Type</string>
    <string name="battery_level">Battery Level</string>
    <string name="expand_button_content_desc">Expand Button</string>
    <string name="apply">Apply</string>
    <string name="settings">Settings</string>
    <string name="charger_unplugged_alarm">Charger Unplugged Alarm</string>
    <string name="do_not_touch_alarm">Do Not Touch Alarm</string>
    <string name="anti_pocket_alarm_desc">Detects when phone is removed from pocket</string>
    <string name="charger_unplugged_alarm_desc">Detects when charger is unplugged</string>
    <string name="show_battery_percentage">Show battery percentage</string>
    <string name="show_on_lock_screen">Show on lock screen</string>
    <string name="close_method">Close method</string>
    <string name="play_duration">Play duration</string>
    <string name="sound_with_animation">Sound with animation</string>
    <string name="exit_dialog_msg">Do you want to exit?</string>
    <string name="ad">Ad</string>
    <string name="error_pin_empty">Can\'t be empty!</string>
    <string name="error_pin_match">Confirmation pin didn\'t match!</string>
    <string name="msg_pin_set_successful">Pin has been set successfully!</string>
    <string name="no_battery">No Battery present</string>
    <string name="set_pin_first">You have to set a pin first!</string>
    <string name="instruct_single_tap">Tap to close the screen</string>
    <string name="instruct_double_tap">Double Tap to close the screen</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="text_search_ringtones">Search for ringtones</string>
    <string name="no_ringtones">No Ringtones Found</string>
    <string name="msg_share_app">\nLet me recommend you this application\n\n</string>
    <string name="msg_anti_pocket_alarm">Phone is removed from pocket!</string>
    <string name="msg_touch_alarm">Device moved!</string>
    <string name="msg_charger_plugged_alarm">Charger Connected!</string>
    <string name="msg_charger_unplugged_alarm">Charger Disconnected!</string>
    <string name="msg_storage_permission">We need storage permission to read and write to the storage!</string>
    <string name="msg_reoord_permission">This app needs access to your microphone to record your voice.</string>
    <string name="permission_required">Permission required!</string>
    <string name="cancel">Cancel</string>
    <string name="msg_display_over_apps_permission">This app needs to display over other apps in order to function properly.</string>
    <string name="guide_batter_info_desc">You can monitor all the battery related info like battery health, battery level, etc.</string>
    <string name="guide_charging_sounds_desc">You can set sound from your phone ringtone, download or record your own voice and set if for animations!</string>
    <string name="guide_anti_theft_protection_desc">Anti-theft protection protects your phone by playing alarm when phone is removed from pocket, charger is unplugged or someone touches and move your phone!</string>
    <string name="guide_charging_animation_desc">Play stunning animations when charger is connected. You can download and set ringtones as your liking!</string>
    <string name="guide_all_set_desc">Here you go! You are all set and done! Enjoy!</string>
    <string name="charging_sound">Charging Sound</string>
    <string name="all_set">You are all set</string>
    <string name="falied_to_play">Failed to play!</string>
    <string name="notification_content_text">For showing charging animations and anti theft protection it is necessary to run the service.</string>
    <string name="notification_title">Service is running</string>
    <string name="no_protection">No Protection Selected</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="msg_animation_add_success">The animation has been set successfully!</string>
    <string name="unit_capacity">mAh</string>
    <string name="unit_volt">mV</string>
    <string name="unit_temperature">°C</string>
</resources>