<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/asset_19__2_"
        android:title="@string/home_screen_title" />

    <item
        android:id="@+id/navigation_battery_info"
        android:icon="@drawable/asset_21"
        android:title="@string/battery_info_screen_title" />

    <item
        android:id="@+id/navigation_animation_graph"
        android:icon="@drawable/asset_20"
        android:title="@string/charging_animation_screen_title" />

    <item
        android:id="@+id/navigation_ringtone_graph"
        android:icon="@drawable/asset_17"
        android:title="@string/ringtone_screen_title" />

    <item
        android:id="@+id/navigation_anti_theft_graph"
        android:icon="@drawable/asset_20__2_"
        android:title="@string/anti_theft_screen_title" />

</menu>