<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.chargingstatusmonitor.souhadev.ui.fragments.HomeFragment"
        android:label="@string/home_screen_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_ringtone"
        android:name="com.chargingstatusmonitor.souhadev.ui.fragments.RingtoneFragment"
        android:label="@string/ringtone_screen_title"
        tools:layout="@layout/fragment_ringtone" >
        <action
            android:id="@+id/action_navigation_ringtone_to_navigation_phone"
            app:destination="@id/navigation_phone" />
        <action
            android:id="@+id/action_navigation_ringtone_to_navigation_download"
            app:destination="@id/navigation_download" />
        <action
            android:id="@+id/action_navigation_ringtone_to_navigation_record"
            app:destination="@id/navigation_record" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.chargingstatusmonitor.souhadev.ui.fragments.SearchFragment"
        android:label="@string/search_screen_title"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_unlock"
            app:destination="@id/navigation_unlock" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.chargingstatusmonitor.souhadev.ui.fragments.SettingsFragment"
        android:label="@string/settings_screen_title"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_phone"
        android:name="com.chargingstatusmonitor.souhadev.ui.fragments.PhoneFragment"
        android:label="@string/phone_screen_title"
        tools:layout="@layout/fragment_phone" >
        <action
            android:id="@+id/action_navigation_phone_to_navigation_unlock"
            app:destination="@id/navigation_unlock" />
    </fragment>

    <fragment
        android:id="@+id/navigation_download"
        android:name="com.chargingstatusmonitor.souhadev.ui.fragments.DownloadFragment"
        android:label="@string/download_screen_title"
        tools:layout="@layout/fragment_download" >
        <action
            android:id="@+id/action_navigation_download_to_navigation_unlock"
            app:destination="@id/navigation_unlock" />
    </fragment>

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.chargingstatusmonitor.souhadev.ui.fragments.RecordFragment"
        android:label="@string/record_screen_title"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_unlock"
        android:name="com.chargingstatusmonitor.souhadev.ui.fragments.UnlockFragment"
        android:label="@string/unlock_screen_title"
        tools:layout="@layout/fragment_unlock" />

</navigation>