<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/bg_button"
        app:backgroundTint="@color/red" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/download"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/download"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button"
        app:backgroundTint="@color/red" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/record"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/record"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button"
        app:backgroundTint="@color/red" />
</LinearLayout>