<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/select_the_type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/onConnectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/on_connect"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/onDisconnectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/on_disconnect"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>