<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SettingsFragment"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/brown"
            android:text="@string/version" />

        <TextView
            android:id="@+id/versionNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="14"
            android:textColor="@color/brown"
            android:alpha=".7"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rateUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/brown"
            android:text="@string/rate_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Ad"
            android:textColor="@color/brown"
            android:alpha=".7"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/brown"
            android:text="@string/share" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/moreApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="18dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/brown"
            android:text="@string/more_apps" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Ad"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/brown"
            android:alpha=".7"/>
    </LinearLayout>


</LinearLayout>