<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="56dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_screen_instructions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:lineSpacingMultiplier="1.6"
        android:textSize="20sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_connect_underline"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:id="@+id/connectFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_disconnect_underline"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:id="@+id/disconnectFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startService"
        android:layout_width="wrap_content"
        android:text="@string/start_service_btn_text"
        android:paddingHorizontal="40dp"
        android:paddingVertical="8dp"
        android:background="@drawable/bg_button"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"/>
</LinearLayout>
