<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/topWave"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_screen_top_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings_screen_title"
        app:titleTextAppearance="@style/ToolbarStyle"
        app:titleTextColor="@color/brown" />

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/topWave"
        app:layout_constraintBottom_toTopOf="@id/bottomWave">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/topWave">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="@color/brown"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/versionNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha=".7"
                    android:textColor="@color/brown"
                    tools:text="14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rateUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@id/version">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_us"
                    android:textColor="@color/brown"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:alpha=".7"
                    android:text="Ad"
                    android:textColor="@color/brown" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@id/rateUs">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="@color/brown"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/moreApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="18dp"
                app:layout_constraintTop_toBottomOf="@id/share">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_apps"
                    android:textColor="@color/brown"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:alpha=".7"
                    android:text="Ad"
                    android:textColor="@color/brown" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>
    <ImageView
        android:id="@+id/bottomWave"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_screen_bottom_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
